[project]
name = "hydra"
dependencies = [
    "flask >=3.0,<4",
    "beautifulsoup4 >=4.12,<5",
    "markdown >=3.6,<4",
    "pygments >2.17,<3",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "flake8 >=7,<8",
    "pytest >=8.1,<9",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
